# rv32i-riscv-emulator

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md
.claude/: settings.local.json
docs/: AI_WORKFLOW.md  ARCHITECTURE.md  ISA_SCOPE.md  PROJECT_BRIEF.md  ROADMAP.md  TESTING_STRATEGY.md
include/emulator/: cpu.hpp  debugger.hpp  decoder.hpp  executor.hpp  memory.hpp  trace.hpp
src/: cpu.cpp  debugger.cpp  decoder.cpp  executor.cpp  main.cpp  memory.cpp  trace.cpp
tests/: CMakeLists.txt  test_cpu.cpp  test_debugger.cpp  test_decoder.cpp  test_executor.cpp  test_memory.cpp  test_trace.cpp
